[package]
name = "priority-semaphore"
version = "0.1.0"
edition = "2024"
description = "Runtime-agnostic priority-aware async semaphore for Rust."
license = "MIT OR Apache-2.0"
repository = "https://github.com/h-sumiya/priority-semaphore"
readme = "README.md"
keywords = ["async", "semaphore", "priority", "tokio", "concurrency"]
categories = ["concurrency", "asynchronous"]


[lib]
crate-type = ["rlib"]


[dependencies]

tokio = { version = "1", optional = true, default-features = false, features = [
    "sync",
    "rt",
] }
async-std = { version = "1", optional = true, default-features = false, features = [
    "attributes",
] }

futures = { version = "0.3", optional = true, default-features = false }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
futures = "0.3"
criterion = { version = "0.6", default-features = false }

[features]
# Enable the standard library by default so that the semaphore
# can be used across threads in tests and examples.
default = ["tokio", "std"]
tokio = ["dep:tokio", "dep:futures"]
async-std = ["dep:async-std", "dep:futures"]
ageing = []
std = ["tokio/rt", "async-std/attributes"]
docsrs = []


[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
