[package]
name = "priority-semaphore"
version = "0.2.0"
edition = "2024"
description = "Runtime-agnostic priority-aware async semaphore for Rust."
license = "MIT OR Apache-2.0"
repository = "https://github.com/h-sumiya/priority-semaphore"
readme = "README.md"
keywords = ["async", "semaphore", "priority", "tokio", "concurrency"]
categories = ["concurrency", "asynchronous"]
documentation = "https://docs.rs/priority-semaphore/"

[lib]
crate-type = ["rlib"]


[dependencies]
parking_lot = { version = "0.12", optional = true }
spin = { version = "0.12", default-features = false, features = ["mutex", "spin_mutex"] }

[dev-dependencies]
criterion = { version = "0.8", default-features = false }
tokio = { version = "1", features = ["full", "test-util"] }

[features]
# The implementation only depends on `Future`/`Waker` from core and is runtime agnostic.
default = ["std"]
std = ["dep:parking_lot"]
docsrs = []

[[bench]]
name = "throughput"
harness = false


[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
